--- a/frontend/src/components/UserProfile/styles/userprofile.global.scss
+++ b/frontend/src/components/UserProfile/styles/userprofile.global.scss
@@ -1,4 +1,7 @@
+@import "../../../global.scss";
+
 .userProfile {
+	margin-top: $margin-top;
 	.user__info-edits {
 		display: flex;
 		justify-content: flex-start;
