--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,12 @@
 	text-align: center;
 	height: 100vh;
 }
+
+.App > .sections {
+	border: 1px solid black;
+	padding-top: 100px !important;
+}
+
 .popUpOn {
 	background: linear-gradient(
 		rgba(0, 0, 0, 0.2),
