--- a/frontend/src/components/Navbar/styles/nav.global.scss
+++ b/frontend/src/components/Navbar/styles/nav.global.scss
@@ -1,6 +1,12 @@
 .wrapper {
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	padding-bottom: 5px;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 10;
+	background-color: white;
+
 	.navbar {
 		display: flex;
 		justify-content: center;
