--- a/frontend/src/components/UserProfile/styles/singlePrevReserv.scss
+++ b/frontend/src/components/UserProfile/styles/singlePrevReserv.scss
@@ -1,11 +1,22 @@
 .single_prev_details {
-	border: 1px solid black;
+	background-color: rgb(240, 240, 240);
+	border-radius: 20px;
 	width: 60%;
 	margin: auto;
 	margin-top: 20px;
+	margin-bottom: 20px;
 
 	h1 {
-		margin: 10px 0 5px 0;
+		margin: 10px auto 5px auto;
+		// border: 1px solid green;
+		width: 90%;
+	}
+
+	h2 {
+		text-align: left;
+		margin: 10px auto;
+		font-size: 23px;
+		width: 90%;
 	}
 
 	.mainHeading {
@@ -22,15 +33,9 @@
 
 	.guest__details,
 	.booking__summary {
-		// display: flex;
-		// justify-content: center;
-		// align-items: center;
-		border: 1px solid red;
-
 		span {
 			display: flex;
 			justify-content: space-between;
-			border: 1px solid green;
 			width: 90%;
 			margin: auto;
 
