--- a/frontend/src/components/Navbar/styles/nav.global.scss
+++ b/frontend/src/components/Navbar/styles/nav.global.scss
@@ -15,6 +15,11 @@
 		border-bottom: 1px solid rgb(196, 196, 196);
 		padding: 15px 0;
 
+		img {
+			width: 100px;
+			margin-right: 20px;
+		}
+
 		i.material-icons {
 			color: grey;
 		}
