--- a/frontend/src/components/SingleRestaurant/customCalender.scss
+++ b/frontend/src/components/SingleRestaurant/customCalender.scss
@@ -1,5 +1,6 @@
 .mainDiv {
 	border-radius: 10px 10px 0 0;
+	background-color: white;
 	width: fit-content;
 	margin: 30px auto;
 	max-height: 380px;
